Fixed horizontal scroll
Issue was due to the div container where my form is set. Removed - this fixed the issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,104 @@
 .empty-state__description {
     margin-bottom: 20px;
 }
+
+body {
+    font-family:
+        'Segoe UI', Roboto, Oxygen-Sans,
+        Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    line-height: 1.4;
+}
+
+.container {
+    width: 100%;
+    margin: 0 auto;
+    color: #333;
+    overflow-y: auto;
+}
+
+.app-title {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 80px;
+    opacity: 0.5;
+}
+
+svg {
+    width: 64px;
+    height: 64px;
+}
+
+.todo-list {
+    list-style: none;
+    margin-bottom: 20px;
+}
+
+.todo-item {
+    margin-bottom: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.todo-item span {
+    flex-grow: 1;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 22px;
+}
+
+.completed span {
+    text-decoration: line-through;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+.tick {
+    width: 30px;
+    height: 30px;
+    border: 3px solid #333;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.tick::before {
+    content: '\2713';
+    font-size: 20px;
+    display: none;
+}
+
+.completed .tick::before {
+    display: inline;
+}
+
+.delete-todo {
+    border: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+}
+
+.delete-todo svg {
+    width: 30px;
+    height: 30px;
+    pointer-events: none;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    border: 3px solid #333;
+}
